# PilotDataSynchronization

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  GetAltitudes.xpl  README.md  TCP.cpp  build.sh  copy-claude-aisuper-linter.yml  get_altitudes.cpp  get_heading.cpp  hello_world.cpp  key_datarefs.md  makefile  meson.build  toml .rust-toolchain.toml  win.ini
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: development-task-template.md
.github/workflows/: ci-cd.yml  ci_cd_pipeline.yml  code-linting.env  code-linting.yml  meson-build.yml  super-linter.yml
Documents/: PRODUCT_ROADMAP_FRAMEWORK.md
docs/: .gitignore  key_datarefs.md
include/: packet.h  threading-tools.h
inference/: README.md  README_TRAINING.md  generate_balanced_data.py  label_generator.py  prepare_data.py  raw_flight_data.csv  requirements.txt  train_model.py  validate_labels.py
inference/Data/: data_logger.py  labeled_flight_data.csv  raw_flight_data.csv  raw_flight_data_updated.csv
inference/Models/: finalModel.pkl
inference/dataset/: X_test.csv  X_train.csv  label_mapping.json  scaler_params.json  test_processed.csv  train_processed.csv  y_test.csv  y_train.csv
relay/: Cargo.toml
relay/src/: bichannel.rs  channel.rs  channel_manager.rs  ipc.rs  lib.rs  main.rs  message.rs  mychart.rs  state.rs  update.rs  view.rs
rust-integration-temp/ipc-cxx/: main.cpp  meson.build
rust-integration-temp/ipc-cxx/ipc-rs/: Cargo.toml
rust-integration-temp/ipc-cxx/ipc-rs/src/: main.rs
rust-integration-temp/ipc-cxx/subprojects/ipc-cpp-rs/: Cargo.toml  build.rs  meson.build
rust-integration-temp/meson-learn/: main.cpp  meson.build
rust-integration-temp/meson-learn/subpr/: .gitignore  main.cpp  meson.build
rust-integration-temp/meson-learn/subpr/subprojects/greet/: greet.cpp  greet.hpp  meson.build
rust-integration-temp/meson-learn/subpr/subprojects/meet/: Cargo.toml  meet.hpp  meson.build  script.py
rust-integration-temp/meson-learn/subpr/subprojects/meet/src/: lib.rs
rust-integration-temp/meson-rust-c/: main.cpp  meson.build
rust-integration-temp/meson-rust-c/inner-rust/: Cargo.toml  build.rs
src/: Logger.cpp  TCP.cpp  TCPClient.cpp  TCPServer.cpp  client.rs  get_heading.cpp  hello-world.cpp  main.cpp  packet.cpp  pilotdatasync-xp11.cpp  threading-tools.cpp
src/clientserver/: Cargo.toml
src/server/src/: main.rs
tests/: CMakeLists.txt  heading_tests.cpp  headingtests.cpp  headingtests.hpp  plugin_tests.cpp  test.cc  validate-packet.py
utils/: init.ps1  init.sh  tasks.json
xplane_plugin/: .clang-format  .gitignore  CMakeLists.txt  README.md  lin-to-win.ini  mac-to-win.ini  mac-x86_64.ini  meson.build  mingw-cross.txt
xplane_plugin/include/: plugin.h  threading-tools.h
xplane_plugin/src/: Logger.cpp  TCPClient.cpp  TCPServer.cpp  config.txt  pilotdatasync-xp11.cpp  pilotdatasync-xp11.macos.cpp
xplane_plugin/subprojects/: x-plane-sdk.wrap
xplane_plugin/subprojects/baton/: Cargo.toml  README.md  build.rs  main.cpp  meson.build  script.py
xplane_plugin/subprojects/baton/.cargo/: config.toml
xplane_plugin/subprojects/baton/src/: lib.rs
xplane_plugin/tests/: .gitignore  test.cc  test_threading_tools.cpp
xplane_plugin/tests/subprojects/baton/: main.cpp
